<resources>
    <string name="app_name">Sage Project Hub</string>
    <string name="title_home">Home</string>
    <string name="title_projects">Projects</string>
    <string name="title_board">Board</string>
    <string name="title_notification">Notification</string>
    <string name="title_menu">Menu</string>

    <string name="user_name">David</string>
    <string name="user_password">1234</string>

    <string name="login_preference">hk.com.sagetech.sageprojecthub_login_preference</string>
    <string name="login_status_preference">hk.com.sagetech.sageprojecthub_login_status_preference</string>

    <string name="home_fragment">Home Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test_logout">test_logout</string>
</resources>
