<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_projects"/>
    <item
        android:id="@+id/navigation_board"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_board"/>
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notification"/>
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_menu"/>



</menu>
